--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "axios": "^0.25.0",
     "react": "17.0.2",
     "react-native": "0.67.2"
   },
@@ -17,6 +18,7 @@
     "@babel/core": "7.17.2",
     "@babel/runtime": "7.17.2",
     "@react-native-community/eslint-config": "2.0.0",
+    "@types/react-native": "^0.66.15",
     "babel-jest": "26.6.3",
     "eslint": "7.14.0",
     "jest": "26.6.3",
